tests/paczka2/big_fuzzy/68521101.err
Error in line 3: ZB97 S586 66,8
Error in line 7: oPqO1EiYkj1 A125 98,0
Error in line 10: V5MT S586 49,4
Error in line 21: Zm9x9qQ A125 30,3
Error in line 26: S586 A32 33,0
Error in line 28: V8hq5N1rADW A125 95,4
Error in line 30: Zm9x9qQ A831 33,9
Error in line 33: V8hq5N1rADW A831 47,8
Error in line 8: ZB97 A125 209,2
Error in line 29: V5MT A831 65,2
Error in line 59: oPqO1EiYkj1 S586 22,55
Error in line 64: oPqO1EiYkj1 A32 45,4
Error in line 62: Zm9x9qQ A83 38,6
Error in line 66: Zm9x9qQ A831 37,4
Error in line 76: S586 A831 7,3
Error in line 79: oPqO1EiYkj1 A32 76,5
Error in line 90: V8hq5N1rADW A831 17,9
Error in line 77: S586 A125 79,6
Error in line 94: LxZ A32 35,6
Error in line 98: S586 S586 83,8
Error in line 103: oPqO1EiYkj1 A125 93,4
Error in line 106: oPqO1EiYkj1 A831 36,1
Error in line 110: oPqO1EiYkj1 A125 21,6
Error in line 114: LxZ A125 69,5
Error in line 116: LxZ A32 50,1
Error in line 121: LxZ S586 53,9
Error in line 132: V8hq5N1rADW A831 9,6
Error in line 135: ZB97 A831 59,7
Error in line 141: V5MT S586 1,6
Error in line 152: V5MT A125 7,2
Error in line 160: ZB97 A125 2,9
Error in line 146: Zm9x9qQ A831 0,6
Error in line 161: ZB97 S586 7,9
Error in line 169: oPqO1EiYkj1 A125 24,9
Error in line 176: Zm9x9qQ A125 33,1
Error in line 180: V5MT A125 27,2
Error in line 178: Zm9x9qQ A831 3,6
Error in line 185: Zm9x9qQ S586 1,9
Error in line 207: V5MT A831 19,9
Error in line 205: ZB97 A831 50,7
Error in line 216: oPqO1EiYkj1 A831 7,4
Error in line 220: oPqO1EiYkj1 S586 91,5
Error in line 221: S586 S586 10,9
Error in line 219: Zm9x9qQ A831 54,4
Error in line 230: S586 A125 33,3
